# 3d_bv

./: .gitignore  Cargo.toml  Findings.md  LICENSE.md  Readme.md
assets/models/LV1/: lv_1.gltf
assets/models/LV1/blender/: lv_1.blend
assets/models/LV_test/: lv_test.gltf
assets/models/LV_test/blender/: lv_test.blend
assets/models/Spaceship/: bullet.gltf
assets/models/Spaceship/blender/: laser.blend
assets/shaders/: color_material.wgsl
src/: bullet.rs  constants.rs  enemy.rs  events.rs  game.rs  level.rs  lib.rs  main.rs  materials.rs  math.rs  particles.rs  player.rs  skybox.rs  velocity.rs
