[package]
name = "bevy_3d_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Michael O'Connell <>"] # ToDo: add email
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png", "x11"]}
rand = "0.8.5"
bevy_hanabi = { version = "0.5", default-features = false, features = [ "3d" ] }
bevy_rapier3d = { version = "0.19", features = [ "simd-stable", "debug-render" ] }
bevy_asset_loader = "0.14.1"
bevy_editor_pls = "0.2.0"

[build-dependencies]
embed-resource = "1.4"
