[package]
name = "bevy_3d_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Michael O'Connell <>"] # ToDo: add email
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version = "0.10", default-features = true}
rand = "0.8.5"
bevy_hanabi = { version = "0.6", default-features = false, features = [ "3d" ] }
bevy_rapier3d = { version = "0.21", features = [ "simd-stable", "debug-render" ] }
bevy_asset_loader = "0.15"
bevy_editor_pls = "0.3"

[build-dependencies]
embed-resource = "1.4"
